add native overlay dialog with performance optimizations and UX improvements
Implement native Android overlay system for event recognition results with comprehensive performance optimizations and improved user experience.

(karena malas jadi ngeprompt saja)

Features:

- Native Android EventResultOverlay showing results on top of any app
- Automatic dialog positioning at top with 80px margin
- Tap outside to dismiss functionality
- Simplified error dialog with minimalist design
- Confidence threshold filter (only show results ≥95%)

Performance Optimizations (Speed Improvement):
- TextRecognizer caching: Reuse ML model instance
- Early exit optimization: Stop on 99%+ match
- Raw RGBA transfer: Eliminate PNG encoding/decoding
- Fast 5-pixel validation: Strategic checks vs 1000 pixels
- Smart Android 13+ delay: Single 50ms vs multiple retries

UI/UX Improvements:
- Minimalist error dialog (❌ icon + \"Event Not Recognized\" only)
- Compact scan button with rounded corners (no backdrop)

Bug Fixes:
- Fixed support card events showing only one option
- Added findAllSupportCardEvents() to fetch all entries with same EventName
- Resolved empty bitmap issue on Android 13+ with delay
- Fixed recognition error from RGBA format mismatch

Technical Changes:
- Android: Raw RGBA byte transfer with width/height metadata
- Android: Native overlay using TYPE_APPLICATION_OVERLAY
- Android: Proper bitmap recycling to prevent memory leaks
- Flutter: Cached TextRecognizer for ML model reuse
- Flutter: Direct RGBA to PNG conversion in-memory for ML Kit
- Flutter: Early exit on perfect match (≥99% confidence)
- Flutter: Support multiple EventOptions entries with same EventName
- Flutter: Categorized option parsing with proper ordering

Data Structure Support:
- Support Card events: Multiple JSON entries with Top/Bottom options
- Uma Character events: Nested UmaEvents array structure
- Career events: Single EventOptions object
- Race events: Race name and details
- All formats: 1-5 options

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,21 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.umazing_helper">
-    <!-- Overlay permissions -->
+    <!-- Overlay permission - for EventResultOverlay display -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.INTERNET" />
     
-    <!-- Screen capture permissions (for future OCR features) -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT" />
-    <uses-permission android:name="android.permission.MEDIA_PROJECTION" />
+    <!-- Foreground service permissions - for MediaProjectionService -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
     
-    <!-- Camera permission (for OCR) -->
-    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- Notification permission - for service notifications -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    
+    <!-- Screen capture permission - for OCR recognition -->
+    <uses-permission android:name="android.permission.MEDIA_PROJECTION" />
 
     <application
         android:label="umazing_helper"
@@ -42,19 +37,15 @@
             </intent-filter>
         </activity>
 
-        <!-- Overlay Service Declaration -->
-        <!-- <service android:name="flutter.overlay.window.flutter_overlay_window.OverlayService" 
-            android:exported="false"
-            android:foregroundServiceType="specialUse">
-            <property android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="Game assistance overlay for Uma Musume event recognition and guidance"/>
-        </service> -->
+        <!-- MediaProjection Service - handles screen capture -->
         <service
             android:name=".MediaProjectionService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="mediaProjection" 
             android:stopWithTask="false" />
+        
+        <!-- Overlay Service - manages scan button overlay -->
         <service
             android:name=".OverlayService"
             android:enabled="true"
