lupa nambahin gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@ app.*.symbols
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+PRE_RELEASE_CHECKLIST.md
+RELEASE_GUIDE.md
